--- a/index.html
+++ b/index.html
@@ -1,73 +1,73 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<!-- Thanks to POCV http://pocv16.eecs.berkeley.edu/index.html for letting us use their template -->
-  <head>
-    <title>3D Point Cloud Reconstruction and Segmentation</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link href="default.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <div id="header">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>3DV 2020 Online Tutorial on 3D Point Cloud Reconstruction and Segmentation</title>
 
-      <div id="logo">
-	<h1>
-		<center>
-        3D Point Cloud Reconstruction and Segmentation<br/>
- <span style="font-size:50%;color:#777;font-weight:normal">
-How can 3D Vision Help and Be Helped?
-</span>
-		</center>
-	</h1>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+</head>
 
-	<h2>
-		<center>
-        <span style="font-size:92%;color:#777;font-weight:normal">November 28th @3DV 2020, Kyushu University, Fukuoka, Japan</span><br/>
-        <span style="font-size:92%;color:#777;font-weight:normal">Zoom Online</span>
-		</center>
-	</h2>
+<body>
 
-  <br>
-  <table align=center width=500px>
-   <tr>
-     <td align=center width=100px>
-     <center>
-     <span style="font-size:18px"><a href="#theme">[Theme]</a></span>
-     </center>
-     </td>
+<div class="container">
+  <table border="0" align="center">
+    <tr>
+      <td width="700" align="center" valign="middle"><h3>3DV 2020 Tutorial on</h3>
+      <span class="title">3D Point Cloud Reconstruction and Segmentation</span></td>
+    </tr>
+    <tr>
+        <td colspan="3" align="center"><h3>Anywhere on earth on November 28, 2020<br><b>Tutorial videos and slides will be released after the online events.</b></h3></td>
+    </tr>
+  </table>
+  <p><img src="./imgs/3DV2020.png" width="1000" align="middle" /></p>
+</div>
 
-     <td align=center width=100px>
-     <center>
-     <span style="font-size:18px"><a href="#speakers">[Speakers]</a></span>
-     </center>
-     </td>
+</br>
 
-     <td align=center width=100px>
-     <center>
-     <span style="font-size:18px"><a href="#schedule">[Schedule]</a></span>
-     </center>
-     </td>
+<div class="container">
+  <h2>Speakers</h2>
+    <div>
+      <div class="instructor">
+          <a href="http://yulanguo.me/" >
+        <div class="instructorphoto"><img src="./imgs/yulan.jpg"></div>
+        <div>Yulan Guo<br>SYSU & NUDT</div>
+        </a>
+      </div>
 
- </tr>
-</table>
+      <div class="instructor">
+        <a href="http://www.ronnieclark.co.uk/">
+            <div class="instructorphoto"><img src="./imgs/ronnie_bw.png"></div>
+            <div>Ronald Clark<br>Imperial College London</div>
+        </a>
+      </div>
 
-    <br>
-    <br>
-	</div>
+      <div class="instructor">
+        <a href="https://yang7879.github.io/">
+            <div class="instructorphoto"><img src="./imgs/bo.jpg"></div>
+            <div>Bo Yang<br>Oxford & PolyU</div>
+        </a>
+      </div>
 
+      <div class="instructor">
+        <a href="https://qingyonghu.github.io/">
+            <div class="instructorphoto"><img src="./imgs/qingyong.jpg"></div>
+            <div>Qingyong Hu<br>Oxford</div>
+        </a>
+      </div>
 
     </div>
-    <center>
+    <p></p>
+</div>
 
-	<div id="splash"><img src="./imgs/cover.png" alt="" width="910px"  />
+</br>
 
-	<div id="content">
-
-    <br>
-    <br>
-    </center>
-
-<h2 id="theme">Theme</h2>
+<div class="container">
+  <h2>Overview</h2>
+    <div class="overview">
 <p>
 With the rapid development of point-cloud acquisition techniques (<I>e.g.</I>, Microsoft Kinect) and computing
 devices, 3D data (point clouds, depth images, meshes) processing has become a rapidly growing research area in
@@ -98,57 +98,34 @@ areas (including computer vision, computer graphics, and machine learning) and f
 communities by presenting most existing 3D point cloud reconstruction and segmentation pipelines
 in a unified framework.
 </p>
+    </div>
+</div>
 
 </br>
-<h2 id="speakers">Speakers</h2>
-<center>
-  <table style="width:90%">
-    <tr><td colspan=3> &nbsp; </td></tr>
-    <tr>
-        <td><center><a href='http://yulanguo.me/'><img height=150 src="./imgs/Yulan.png"/></a></center></td>
-        <td><center><a href='http://www.ronnieclark.co.uk/'><img height=150 src="./imgs/ronnie_bw.png"></a></center></td>
-        <td><center><a href='https://yang7879.github.io/'><img height=150 src="./imgs/bo.jpg"></a></center></td>
-        <td><center><a href='https://qingyonghu.github.io/'><img height=150 src="./imgs/qingyong.jpg"></a></center></td>
 
-    </tr>
-    <tr>
-        <td><center><h3>Yulan Guo</h3></center></td>
-        <td><center><h3>Ronald Clark </h3></center></td>
-        <td><center><h3>Bo Yang</h3></center></td>
-        <td><center><h3>Qingyong Hu</h3></center></td>
-
-    </tr>
-    <tr>
-      <td> <center><font size= "2">Sun Yat-sen University  <br>
-          National University of Defense Technology</font></center> </td>
-      <td> <center><font size="2">Imperial College London</font></center></td>
-      <td> <center><font size= "2">University of Oxford  <br>
-           Hong Kong Polytechnic University</font></center> </td>
-      <td> <center><font size= "2">University of Oxford</font></center> </td>
-
-    </tr>
-
-  </table>
-
-</center>
-
-
-<h2 id="schedule">Schedule</h2>
-    <center>
-
-    <table style="width:100%", border="1">
+<div class="container">
+  <h2>Schedule</h2>
+    <div class="schedule">
+            <table style="width:100%", border="1">
       <tr>
-        <th width="20%", align="left"> Time (UTC) </th>
-        <th width="80%", align="left"> Topic </th>
+        <th width="15%", align="left"> Time (GMT) </th>
+        <th width="15%", align="left"> Time (EST) </th>
+        <th width="15%", align="left"> Time (Tokyo) </th>
+        <th width="55%", align="left"> Topic </th>
       </tr>
 
       <tr>
+
         <td> 08:00-08:05 </td>
+        <td> 04:00-04:05 </td>
+        <td> 17:00-17:05 </td>
         <td> Welcome and Introduction </td>
       </tr>
 
       <tr>
         <td> 08:05-08:50 </td>
+        <td> 04:05-04:50 </td>
+        <td> 17:05-17:50 </td>
         <br>
         <td>  <b> Background & Applications </b>
         <br>
@@ -161,6 +138,9 @@ in a unified framework.
       </tr>
       <tr>
         <td> 08:50-09:35 </td>
+        <td> 04:50-05:35 </td>
+        <td> 17:50-18:35 </td>
+
         <td>  <b> 3D Point Cloud Reconstruction </b>
         <br>
             Presenter: Dr. Ronald Clark
@@ -173,6 +153,9 @@ in a unified framework.
       </tr>
       <tr>
         <td> 09:35-10:20 </td>
+        <td> 05:35-06:20 </td>
+        <td> 18:35-19:20 </td>
+
         <td>  <b> 3D Point Cloud Semantic Segmentation </b>
         <br>
             Presenter: Mr. Qingyong Hu
@@ -183,6 +166,9 @@ in a unified framework.
       </tr>
       <tr>
         <td> 10:20-11:05 </td>
+        <td> 06:20-07:05 </td>
+        <td> 19:20-20:05 </td>
+
         <td>  <b> 3D Point Cloud Instance Segmentation </b>
         <br>
             Presenter: Dr. Bo Yang
@@ -196,6 +182,9 @@ in a unified framework.
       </tr>
       <tr>
         <td> 11:05-11:50 </td>
+        <td> 07:05-07:50 </td>
+        <td> 20:05-20:50 </td>
+
         <td>  <b> Panel Discussion </b>
         <br>
             Host: Dr. Yulan Guo
@@ -208,22 +197,22 @@ in a unified framework.
       </tr>
       <tr>
         <td> 11:50-12:00 </td>
+        <td> 07:50-08:00 </td>
+        <td> 20:50-21:00 </td>
         <td> Acknowledgments </td>
       </tr>
 
     </table>
-    </center>
 
-
-<h2>Contact Info</h2>
-<p>
-  E-mail: {qingyong.hu} at ox dot ac dot uk
-</p>
-
-</br></br></br>
-
-<div style="clear: both;">&nbsp;</div>
+    </div>
 </div>
 
+</br>
+
+<div class="containersmall">
+    <p>Please contact <a href="mailto:qingyong.hu@cs.ox.ac.uk">Qingyong Hu</a> if you have question.</p>
+</div>
+
+<!--<p align="center" class="acknowledgement">Last updated: Jan. 6, 2017</p>-->
 </body>
 </html>
