--- a/index.html
+++ b/index.html
@@ -63,6 +63,28 @@
     <p></p>
 </div>
 
+<div class="container">
+    <h2>Invited Panel Speakers</h2>
+    <div>
+        <div class="instructor">
+            <a href="https://homes.cs.washington.edu/~xren/">
+                <div class="instructorphoto"><img src="./imgs/xiaofeng.jpg"></div>
+                <div>Xiaofeng Ren<br>AutoNavi @ Alibaba</div>
+            </a>
+        </div>
+
+        <div class="instructor">
+            <a href="https://3dom.fbk.eu/people/profile/remondino">
+                <div class="instructorphoto"><img src="./imgs/remondino.jpeg"></div>
+                <div>Fabio Remondino<br>3DOM @ FBK Trento</div>
+            </a>
+        </div>
+
+    </div>
+    <p></p>
+</div>
+
+
 </br>
 
 <div class="container">
